# vsss-pc

./: .gitignore  .gitmodules  README.md  config.yaml  main.py  pyproject.toml
scripts/: generate_proto.sh  plot_path.py  plot_telemetry.py  run_trajectory.py
tests/: __init__.py  test_kinematics.py  test_lqr_tracker.py  test_serial_telemetry.py  test_sim_velocity.py  test_trajectory.py
vsss/: config.py
vsss/analysis/: __init__.py  plot_trajectory.py  telemetry_logger.py
vsss/comms/: __init__.py  base.py  both_sender.py  serial_sender.py  sim_sender.py
vsss/control/: __init__.py  base.py  lqr_tracker.py  pure_pursuit.py
vsss/kinematics/: __init__.py  differential.py
vsss/trajectory/: __init__.py  path.py  shapes.py
vsss/vision/: reader.py
