[project]
name = "vsss-pc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "protobuf>=7.35.0",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
